# docs/openapi.yaml
@@ -94,6 +94,57 @@ paths:
           description: "User deleted successfully"
         "404":
           description: "User not found"
+  /api/v1/cards/{id}:
+    get:
+      tags:
+      - "Cards"
+      summary: "Get card by ID"
+      description: "Retrieve a card by their ID"
+      operationId: "getOne"
+      parameters:
+      - name: "id"
+        in: "path"
+        required: true
+        schema:
+          type: "integer"
+          format: "int64"
+      responses:
+        "200":
+          description: "Card found"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/CardDto"
+        "404":
+          description: "Card not found"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/CardDto"
+    put:
+      tags:
+      - "Cards"
+      operationId: "update"
+      parameters:
+      - name: "id"
+        in: "path"
+        required: true
+        schema:
+          type: "integer"
+          format: "int64"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CardUpdateDto"
+        required: true
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/CardDto"
   /api/v1/users:
     get:
       tags:
@@ -175,9 +226,55 @@ paths:
               schema:
                 $ref: "#/components/schemas/UserDto"
   /api/v1/cards:
+    get:
+      tags:
+      - "Cards"
+      summary: "Get all cards by filter(email)"
+      description: "Retrieve all cards with pagination and filter(email"
+      operationId: "getAll"
+      parameters:
+      - name: "userEmail"
+        in: "query"
+        required: false
+        schema:
+          type: "string"
+      - name: "page"
+        in: "query"
+        description: "Zero-based page index (0..N)"
+        required: false
+        schema:
+          type: "integer"
+          default: 0
+          minimum: 0
+      - name: "size"
+        in: "query"
+        description: "The size of the page to be returned"
+        required: false
+        schema:
+          type: "integer"
+          default: 20
+          minimum: 1
+      - name: "sort"
+        in: "query"
+        description: "Sorting criteria in the format: property,(asc|desc). Default\
+          \ sort order is ascending. Multiple sort criteria are supported."
+        required: false
+        schema:
+          type: "array"
+          items:
+            type: "string"
+      responses:
+        "200":
+          description: "Cards retrieved successfully"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/PagedModelCardDto"
     post:
       tags:
       - "Cards"
+      summary: "Create card"
+      description: "Create a new card"
       operationId: "create_1"
       requestBody:
         content:
@@ -187,7 +284,13 @@ paths:
         required: true
       responses:
         "200":
-          description: "OK"
+          description: "Card created successfully"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/CardDto"
+        "400":
+          description: "Invalid input data"
           content:
             '*/*':
               schema:
@@ -211,6 +314,36 @@ components:
           enum:
           - "USER"
           - "ADMIN"
+    CardUpdateDto:
+      type: "object"
+      properties:
+        status:
+          type: "string"
+          enum:
+          - "ACTIVE"
+          - "BLOCKED"
+          - "EXPIRED"
+        balance:
+          type: "number"
+    CardDto:
+      type: "object"
+      properties:
+        id:
+          type: "integer"
+          format: "int64"
+        maskedCardNumber:
+          type: "string"
+        expiryDate:
+          type: "string"
+          format: "date"
+        status:
+          type: "string"
+          enum:
+          - "ACTIVE"
+          - "BLOCKED"
+          - "EXPIRED"
+        balance:
+          type: "number"
     UserCreateDto:
       type: "object"
       properties:
@@ -246,25 +379,6 @@ components:
           format: "int64"
         balance:
           type: "number"
-    CardDto:
-      type: "object"
-      properties:
-        id:
-          type: "integer"
-          format: "int64"
-        maskedCardNumber:
-          type: "string"
-        expiryDate:
-          type: "string"
-          format: "date"
-        status:
-          type: "string"
-          enum:
-          - "ACTIVE"
-          - "BLOCKED"
-          - "EXPIRED"
-        balance:
-          type: "number"
     PageMetadata:
       type: "object"
       properties:
@@ -287,5 +401,14 @@ components:
           type: "array"
           items:
             $ref: "#/components/schemas/UserDto"
+        page:
+          $ref: "#/components/schemas/PageMetadata"
+    PagedModelCardDto:
+      type: "object"
+      properties:
+        content:
+          type: "array"
+          items:
+            $ref: "#/components/schemas/CardDto"
         page:
           $ref: "#/components/schemas/PageMetadata"
